; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/kvm/extr_pmu_amd.c_amd_pmu_set_msr.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/kvm/extr_pmu_amd.c_amd_pmu_set_msr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvm_vcpu = type { i32 }
%struct.msr_data = type { i32, i32 }
%struct.kvm_pmu = type { i32 }
%struct.kvm_pmc = type { i32, i32 }

@PMU_TYPE_COUNTER = common dso_local global i32 0, align 4
@PMU_TYPE_EVNTSEL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.kvm_vcpu*, %struct.msr_data*)* @amd_pmu_set_msr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @amd_pmu_set_msr(%struct.kvm_vcpu* %0, %struct.msr_data* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.kvm_vcpu*, align 8
  %5 = alloca %struct.msr_data*, align 8
  %6 = alloca %struct.kvm_pmu*, align 8
  %7 = alloca %struct.kvm_pmc*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.kvm_vcpu* %0, %struct.kvm_vcpu** %4, align 8
  store %struct.msr_data* %1, %struct.msr_data** %5, align 8
  %10 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %4, align 8
  %11 = call %struct.kvm_pmu* @vcpu_to_pmu(%struct.kvm_vcpu* %10)
  store %struct.kvm_pmu* %11, %struct.kvm_pmu** %6, align 8
  %12 = load %struct.msr_data*, %struct.msr_data** %5, align 8
  %13 = getelementptr inbounds %struct.msr_data, %struct.msr_data* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  store i32 %14, i32* %8, align 4
  %15 = load %struct.msr_data*, %struct.msr_data** %5, align 8
  %16 = getelementptr inbounds %struct.msr_data, %struct.msr_data* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  store i32 %17, i32* %9, align 4
  %18 = load %struct.kvm_pmu*, %struct.kvm_pmu** %6, align 8
  %19 = load i32, i32* %8, align 4
  %20 = load i32, i32* @PMU_TYPE_COUNTER, align 4
  %21 = call %struct.kvm_pmc* @get_gp_pmc_amd(%struct.kvm_pmu* %18, i32 %19, i32 %20)
  store %struct.kvm_pmc* %21, %struct.kvm_pmc** %7, align 8
  %22 = load %struct.kvm_pmc*, %struct.kvm_pmc** %7, align 8
  %23 = icmp ne %struct.kvm_pmc* %22, null
  br i1 %23, label %24, label %36

24:                                               ; preds = %2
  %25 = load i32, i32* %9, align 4
  %26 = sext i32 %25 to i64
  %27 = load %struct.kvm_pmc*, %struct.kvm_pmc** %7, align 8
  %28 = call i64 @pmc_read_counter(%struct.kvm_pmc* %27)
  %29 = sub nsw i64 %26, %28
  %30 = load %struct.kvm_pmc*, %struct.kvm_pmc** %7, align 8
  %31 = getelementptr inbounds %struct.kvm_pmc, %struct.kvm_pmc* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 4
  %33 = sext i32 %32 to i64
  %34 = add nsw i64 %33, %29
  %35 = trunc i64 %34 to i32
  store i32 %35, i32* %31, align 4
  store i32 0, i32* %3, align 4
  br label %63

36:                                               ; preds = %2
  %37 = load %struct.kvm_pmu*, %struct.kvm_pmu** %6, align 8
  %38 = load i32, i32* %8, align 4
  %39 = load i32, i32* @PMU_TYPE_EVNTSEL, align 4
  %40 = call %struct.kvm_pmc* @get_gp_pmc_amd(%struct.kvm_pmu* %37, i32 %38, i32 %39)
  store %struct.kvm_pmc* %40, %struct.kvm_pmc** %7, align 8
  %41 = load %struct.kvm_pmc*, %struct.kvm_pmc** %7, align 8
  %42 = icmp ne %struct.kvm_pmc* %41, null
  br i1 %42, label %43, label %62

43:                                               ; preds = %36
  %44 = load i32, i32* %9, align 4
  %45 = load %struct.kvm_pmc*, %struct.kvm_pmc** %7, align 8
  %46 = getelementptr inbounds %struct.kvm_pmc, %struct.kvm_pmc* %45, i32 0, i32 0
  %47 = load i32, i32* %46, align 4
  %48 = icmp eq i32 %44, %47
  br i1 %48, label %49, label %50

49:                                               ; preds = %43
  store i32 0, i32* %3, align 4
  br label %63

50:                                               ; preds = %43
  %51 = load i32, i32* %9, align 4
  %52 = load %struct.kvm_pmu*, %struct.kvm_pmu** %6, align 8
  %53 = getelementptr inbounds %struct.kvm_pmu, %struct.kvm_pmu* %52, i32 0, i32 0
  %54 = load i32, i32* %53, align 4
  %55 = and i32 %51, %54
  %56 = icmp ne i32 %55, 0
  br i1 %56, label %61, label %57

57:                                               ; preds = %50
  %58 = load %struct.kvm_pmc*, %struct.kvm_pmc** %7, align 8
  %59 = load i32, i32* %9, align 4
  %60 = call i32 @reprogram_gp_counter(%struct.kvm_pmc* %58, i32 %59)
  store i32 0, i32* %3, align 4
  br label %63

61:                                               ; preds = %50
  br label %62

62:                                               ; preds = %61, %36
  store i32 1, i32* %3, align 4
  br label %63

63:                                               ; preds = %62, %57, %49, %24
  %64 = load i32, i32* %3, align 4
  ret i32 %64
}

declare dso_local %struct.kvm_pmu* @vcpu_to_pmu(%struct.kvm_vcpu*) #1

declare dso_local %struct.kvm_pmc* @get_gp_pmc_amd(%struct.kvm_pmu*, i32, i32) #1

declare dso_local i64 @pmc_read_counter(%struct.kvm_pmc*) #1

declare dso_local i32 @reprogram_gp_counter(%struct.kvm_pmc*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
